<resources>
    <string name="app_name" translatable="true">FORM Clock Widget</string>
    <string name="preview_description" translatable="true">Widget preview</string>
    <string name="dream_name" translatable="true">FORM Clock</string>
    <string name="contact_email" translatable="false">beatonma+form@gmail.com</string>
    <string name="contact_email_subject" translatable="true">FORM Clock Widget feedback</string>
    <string name="contact_community" translatable="false">https://plus.google.com/u/0/communities/113955537219140914914/stream/a4a4125e-981b-41cc-a848-6c038d002a05</string>
    <string-array name="tab_titles">
        <item>@string/config_tab_colors</item>
        <item>@string/config_tab_layout</item>
        <item>@string/config_tab_format</item>
        <item>@string/config_tab_other</item>
        <item>@string/config_tab_feedback</item>
    </string-array>
    <string name="config_tab_layout" translatable="true">Layout</string>
    <string name="config_tab_colors" translatable="true">Colors</string>
    <string name="config_tab_format" translatable="true">Format</string>
    <string name="config_tab_other" translatable="true">Other</string>
    <string name="config_tab_beta" translatable="true">Beta</string>
    <string name="config_tab_feedback" translatable="true">Feedback</string>
    <string name="pref_color_section_main" translatable="true">Main</string>
    <string name="pref_color_section_shadow" translatable="true">Outline</string>
    <string name="pref_color_section_complications" translatable="true">Complications</string>
    <string name="pref_color_section_bias" translatable="true">Generation</string>
    <string name="pref_color_bias" translatable="true">Automatic bias</string>
    <string name="pref_color_bias_default" translatable="true">Default</string>
    <string name="pref_color_bias_dark" translatable="true">Prefer darker colors</string>
    <string name="pref_color_bias_light" translatable="true">Prefer lighter colors</string>
    <string-array name="color_bias_entries">
        <item>@string/pref_color_bias_default</item>
        <item>@string/pref_color_bias_dark</item>
        <item>@string/pref_color_bias_light</item>
    </string-array>
    <string name="pref_theme_show_shadows" translatable="true">Enable outlines</string>
    <string name="pref_theme_show_shadows_summary" translatable="true">Show a thin outline to make it easier to see against your wallpaper.</string>
    <string name="pref_theme_orientation" translatable="true">Orientation</string>
    <string name="orientation_horizontal" translatable="true">Horizontal</string>
    <string name="orientation_vertical" translatable="true">Vertical</string>
    <string name="orientation_device" translatable="true">Device orientation</string>
    <string-array name="orientation_entries">
        <item>@string/orientation_horizontal</item>
        <item>@string/orientation_vertical</item>
        <item>@string/orientation_device</item>
    </string-array>
    <string name="pref_complication_date" translatable="true">Date</string>
    <string name="pref_date_format" translatable="true">Date format</string>
    <string name="date_format_long" translatable="false">EEEE d MMMM</string>
    <string name="date_format_short" translatable="false">EEE d MMM</string>
    <string name="date_format_custom" translatable="false">__custom__</string>
    <string-array name="date_format_entries">
        <item>@string/date_format_long</item>
        <item>@string/date_format_short</item>
        <item>@string/date_format_custom</item>
    </string-array>
    <string name="pref_date_uppercase" translatable="true">Uppercase</string>
    <string name="pref_complication_alarm" translatable="true">Next alarm</string>
    <string name="pref_update_interval" translatable="true">Color update frequency</string>
    <string name="pref_update_interval_summary" translatable="true">How often colors should sync with your wallpaper. You can force an update manually by tapping the widget.</string>
    <string name="update_interval_minute" translatable="true">Every minute</string>
    <string name="update_interval_hour" translatable="true">Every hour</string>
    <string name="update_interval_day" translatable="true">Every day</string>
    <string name="update_interval_manual" translatable="true">Manual updates only</string>
    <string-array name="update_interval_entries">
        <item>@string/update_interval_minute</item>
        <item>@string/update_interval_hour</item>
        <item>@string/update_interval_day</item>
        <item>@string/update_interval_manual</item>
    </string-array>
    <string name="pref_section_format_time" translatable="true">Clock</string>
    <string name="pref_format_time" translatable="true">Time</string>
    <string name="pref_format_time_summary" translatable="true">Use system settings.</string>
    <string name="pref_section_format_complications" translatable="true">Complications</string>
    <string name="time_format_system" translatable="true">Use system setting</string>
    <string name="time_format_12" translatable="true">12 hour</string>
    <string name="time_format_24" translatable="true">24 hour</string>
    <string-array name="time_format_entries">
        <item>@string/time_format_system</item>
        <item>@string/time_format_12</item>
        <item>@string/time_format_24</item>
    </string-array>
    <string name="pref_format_zero_padding" translatable="true">Zero-padding</string>
    <string name="pref_enable_animation" translatable="true">Enable animation</string>
    <string name="pref_enable_animation_summary" translatable="true"><b>Warning</b>: widgets are not meant to animate! Animation is rarely smooth and may cause performance issues.</string>
    <string name="pref_on_touch" translatable="true">Touch shortcut(s)</string>
    <string name="pref_on_touch_summary" translatable="true">Choose what happens when the widget is touched.</string>
    <string name="on_touch_nothing" translatable="true">Nothing</string>
    <string name="pref_force_persistence" translatable="true">Force persistence</string>
    <string name="pref_force_persistence_summary" translatable="true">Only enable if you have problems with the clock not updating properly! Note that this will add a persistent notification to your system notifications.</string>
    <string name="extensions_dashclock_missing_title" translatable="true">Dashclock required</string>
    <string name="extensions_dashclock_missing_description" translatable="true">Dashclock must be installed to allow access to Dashclock extensions. Please install it from the Play Store below.</string>
    <string name="incompatible_extension_menu_template" translatable="true">%1$s (Incompatible)</string>
    <string name="incompatible_extension_message_search_play_template" translatable="true"><![CDATA[The
        <b>%1$s</b> extension is incompatible with this version of DashClock.
        Look for an update to the extension on Google Play?]]></string>
    <string name="fragtag_colorpicker" translatable="false">colorpicker</string>
    <string name="fragtag_listpreference" translatable="false">listpreference</string>
    <string name="fragtag_floating" translatable="false">floating</string>
    <string name="fragtag_changelog" translatable="false">changelog</string>
    <string name="fragtag_extension_config" translatable="false">extension_config</string>
    <string name="transition_appbar" translatable="false">transition_appbar</string>
    <string name="transition_content" translatable="false">transition_content</string>
    <string name="help_color_locking_title" translatable="true">Welcome to v2.0!</string>
    <string name="help_color_locking_content_1" translatable="true">Color selection is now much more flexible and works a little differently.</string>
    <string name="help_color_locking_content_2" translatable="true"><li>The switch below each patch \'locks\' that color so that it always stays the same.</li></string>
    <string name="help_color_locking_content_3" translatable="true"><li>Any unlocked colors will be replaced depending on your wallpaper.</li></string>
    <string name="help_date_formatting_title" translatable="true">Formatting examples:</string>
    <string name="button_understood" translatable="true">Understood</string>
    <string name="button_changelog" translatable="true">What else is new?</string>
    <string name="button_close" translatable="true">Close</string>
    <string name="button_email" translatable="true">Send email</string>
    <string name="button_community" translatable="true">Visit G+ Community</string>
    <string name="changelog_title" translatable="true">Change log</string>
    <string name="changelog" translatable="false">
        <b>v2.0.2</b>:\n
        <li>New: French translation, thanks to Mickael (<a href="https://github.com/M2ck">M2ck</a>)!</li>\n
        <li>New: Automatic day/night theme switching for the settings app and shortcut launcher.</li>\n
        <li>New: Persistent mode, for those who are having problems with the widget not updating. Please note, this will add a persistent notification to your system notifications</li>\n
        <li>Fixed: Alarm complication will now show 12 noon correctly when using 12-hour time format.</li>\n
        <li>Fixed: The number 7 no longer shows overlapping sections when using transparent colors.</li>\n
        <li>Fixed: Some strange behaviour in list dialogs.</li>\n
        <li>Fixed: Several crashy things:
        - Workaround to compensate for some launchers reporting wrong dimensions when widget is resized.\n
        - Workaround to compensate for Samsung on some Samsung devices when requesting current wallpaper.\n
        - Better handling of invalid/corrupted touch shortcuts.
        - Two other minor fixes which each affected a single person.</li>\n
        \n\n\n


        <b>v2.0.1</b> (February 2016):\n
        <li>New option to tweak automatic color-picking to prefer lighter/darker colors.</li>\n
        <li>Fixed: Muzei wallpaper changes will now automatically force a color update.</li>\n
        <li>Fixed: Touch shortcuts will no longer remove FORM from the Recents overview screen.</li>\n
        \n\n\n


        <b>v2.0</b> (February 2016):\n
        Rebuilt from the ground up!\n\n
        <li>Optimized widget rendering code.</li>\n\n
        <li>Much more flexible color options:\n
        - You can now pick any ARGB color, or pick one of the presets.\n
        - Separate color controls for outlines and complications.\n
        - Each color can now be \'locked\' individually.
        --- Locked colors will stay the same no matter what wallpaper you use.\n
        --- Unlocked colors will be replaced by colors picked from your wallpaper.</li>\n\n
        <li>Flexible new formatting options for the clock and any complications.</li>\n\n
        <li>New option to change widget layout depending on device rotation</li>\n\n
        <li>New option to change the frequency of color-syncing with your wallpaper. Choose a lower frequency to reduce system resource usage\n
        - You can always tap on the widget to force a resync.</li>\n\n
        <li>You can now choose more than one app shortcut - if more than one is selected then tapping the widget will show you a launcher list to choose from, otherwise it will open the chosen app immediately.</li>\n
        <li>Added a very basic Daydream. For now this is essentially an easter egg but will be improved on in future updates.</li>\n
        \n\n
    </string>
    <string name="beta_thankyou_title" translatable="true">Thank you!</string>
    <string name="beta_thankyou" translatable="true">
        Thank you for helping me test this beta version of FORM Clock Widget.\n\n
        Please let me know if you have any crashes or unexpected oddities and I will do my best to sort them out quickly. Any other forms of feedback and requests are welcome too!
    </string>
</resources>