<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/top_level_container">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/card_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beta_thankyou_title"
            style="@style/ListItemTitle.Dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beta_thankyou"
            style="@style/ListItemDescription.Dark"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_email"
            android:gravity="right|end|center_vertical"
            android:text="@string/button_email"
            style="@style/Button.Flat.Dialog"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_community"
            android:gravity="right|end|center_vertical"
            android:text="@string/button_community"
            style="@style/Button.Flat"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_changelog"
            android:gravity="right|end|center_vertical"
            android:text="@string/changelog_title"
            style="@style/Button.Flat"/>
    </LinearLayout>
</ScrollView>