<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pref="http://schemas.android.com/apk/res-auto"
    xmlns:list="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/top_level_container">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.beatonma.formclockwidget.app.ui.ListPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            list:name="@string/pref_theme_orientation"
            list:key="pref_theme_orientation"
            list:entries="@array/orientation_entries"
            list:showSelected="true"/>

        <com.beatonma.formclockwidget.app.ui.SwitchPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/show_shadow"
            pref:name="@string/pref_theme_show_shadows"
            pref:key="pref_theme_show_shadows"/>

        <!-- Padding -->
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <!-- Complications -->
        <com.beatonma.formclockwidget.app.ui.PreferenceSection
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            pref:name="@string/pref_color_section_complications"/>

        <com.beatonma.formclockwidget.app.ui.SwitchPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            pref:name="@string/pref_complication_date"
            pref:key="pref_complication_date"/>

        <com.beatonma.formclockwidget.app.ui.SwitchPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            pref:name="@string/pref_complication_alarm"
            pref:key="pref_complication_alarm"/>

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/date_format">-->

            <!--&lt;!&ndash; Padding &ndash;&gt;-->
            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="16dp"/>-->

            <!--<com.beatonma.formclockwidget.app.ui.PreferenceSection-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--pref:name="@string/pref_section_format"/>-->

            <!--<com.beatonma.formclockwidget.app.ui.ListPreference-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--pref:name="@string/pref_date_format"-->
                <!--pref:key="pref_date_format"/>-->

            <!--<com.beatonma.formclockwidget.app.ui.SwitchPreference-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--pref:name="@string/pref_date_uppercase"-->
                <!--pref:key="pref_date_uppercase"/>-->
        <!--</LinearLayout>-->

        <!-- Padding -->
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>
    </LinearLayout>
</ScrollView>