<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="48dp"
    android:gravity="center">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/overlay"
        android:background="@color/TextSecondary"
        android:alpha="0"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/statusbar_height"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:id="@+id/card"
        style="@style/Card">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:id="@+id/content_container">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/changelog_title"
                style="@style/ListItemTitle"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_above="@+id/button_dismiss"
                android:id="@+id/content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/changelog"
                    style="@style/ListItemDescription"/>
            </ScrollView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/button_dismiss"
                android:text="@string/button_close"
                style="@style/Button.Flat.Dialog"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>